@@ -34,14 +34,6 @@ typedef struct ThreadSpecificData {
 				 * indexed by ChannelState, as only one
 				 * ChannelState exists per set of stacked
 				 * channels. */
-#ifdef oldcode
-    int channelExitHandlerCreated;
-				/* Has a channel exit handler been created
-				 * yet? */
-    int channelEventSourceCreated;
-				/* Has the channel event source been created
-				 * and registered with the notifier? */
-#endif
     Tcl_Channel stdinChannel;	/* Static variable for the stdin channel. */
     int stdinInitialized;
     Tcl_Channel stdoutChannel;	/* Static variable for the stdout channel. */
