@@ -1,5 +1,8 @@
 2007-07-02  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclIO.c:	Removed dead code.
+	* unix/tclUnixChan.c:
+
 	* generic/tclCompExpr.c:	Removed dead code, old implementations
 	* generic/tclEvent.c:	of expr parsing and compiling, including the
 	* generic/tclInt.h:	routine TclFinalizeCompilation().
